--- a/GUI/config.json
+++ b/GUI/config.json
@@ -7,7 +7,7 @@
   },
   {
    "optionDest": "filenames",
-   "value": "D:/Github/repositories/PDBASER/GUI/EXPERIMENTAL/PDBaser_GUI.py"
+   "value": "D:\\Github\\repositories\\PDBASER\\GUI\\Build\\PDBaser_GUI.py"
   },
   {
    "optionDest": "onefile",
@@ -19,7 +19,7 @@
   },
   {
    "optionDest": "icon_file",
-   "value": "D:/Github/repositories/PDBASER/GUI/EXPERIMENTAL/default_icon.ico"
+   "value": "D:/Github/repositories/PDBASER/GUI/Build/default_icon.ico"
   },
   {
    "optionDest": "ascii",
@@ -58,8 +58,24 @@
    "value": false
   },
   {
+   "optionDest": "hiddenimports",
+   "value": "pygubu.builder.tkstdwidgets"
+  },
+  {
+   "optionDest": "hiddenimports",
+   "value": "pygubu.builder.ttkstdwidgets"
+  },
+  {
+   "optionDest": "hiddenimports",
+   "value": "pygubu.builder.widgets"
+  },
+  {
+   "optionDest": "hiddenimports",
+   "value": "pygubu.builder.widgets.pathchooserinput"
+  },
+  {
    "optionDest": "datas",
-   "value": "D:/Github/repositories/PDBASER/GUI/EXPERIMENTAL/Main.ui;."
+   "value": "D:/Stuff/iconv.dll;."
   },
   {
    "optionDest": "hiddenimports",
@@ -79,235 +95,115 @@
   },
   {
    "optionDest": "datas",
-   "value": "D:/Github/repositories/PDBASER/GUI/EXPERIMENTAL/default_icon.ico;."
+   "value": "D:/Github/repositories/PDBASER/GUI/Build/default_icon.ico;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_cairo.obf;."
+   "value": "D:/Github/repositories/PDBASER/GUI/Build/Main.ui;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_common.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/bz2.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_compchem.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/cairo.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_json.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/expat.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_misc.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/fontconfig.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_utility.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/formats_cairo.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_xml.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/formats_common.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_charges.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/formats_compchem.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_descriptors.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/formats_json.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_fingerprints.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/formats_misc.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_forcefields.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/formats_utility.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_ops.obf;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/formats_xml.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/cairo.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/freetype.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libinchi.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/iconv.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libxml2.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/libcharset.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/License.txt;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/libiconv.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/xdr-0.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/libinchi.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libiconv.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/libpng16.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libpng16.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/libxml2.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/freetype.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/openbabel-3.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "D:/Stuff/iconv.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/plugin_charges.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/bz2.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/plugin_descriptors.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/expat.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/plugin_fingerprints.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/fontconfig.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/plugin_forcefields.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libcharset.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/plugin_ops.obf;."
   },
   {
    "optionDest": "datas",
-   "value": "D:/Github/repositories/PDBASER/GUI/EXPERIMENTAL/Main.ui;."
-  },
-  {
-   "optionDest": "hiddenimports",
-   "value": "pygubu.builder.tkstdwidgets"
-  },
-  {
-   "optionDest": "hiddenimports",
-   "value": "pygubu.builder.ttkstdwidgets"
-  },
-  {
-   "optionDest": "hiddenimports",
-   "value": "pygubu.builder.widgets"
-  },
-  {
-   "optionDest": "hiddenimports",
-   "value": "pygubu.builder.widgets.pathchooserinput"
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/xdr-0.dll;."
   },
   {
    "optionDest": "datas",
-   "value": "D:/Github/repositories/PDBASER/GUI/EXPERIMENTAL/default_icon.ico;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_cairo.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_common.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_compchem.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_json.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_misc.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_utility.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/formats_xml.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_charges.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_descriptors.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_fingerprints.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_forcefields.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/plugin_ops.obf;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/cairo.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libinchi.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libxml2.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/License.txt;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/xdr-0.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libiconv.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libpng16.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/freetype.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "D:/Stuff/iconv.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/bz2.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/expat.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/fontconfig.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/libcharset.dll;."
-  },
-  {
-   "optionDest": "datas",
-   "value": "C:/OpenBabel-3.1.1/zlib1.dll;."
+   "value": "C:/Users/bL4nK/output/OBABEL-LIBS/zlib1.dll;."
   }
  ],
  "nonPyinstallerOptions": {
