--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,17 @@ GUI/EXPERIMENTAL/__pycache__/pdbExtractor.cpython-36.pyc
 /GUI/Build/.vscode/
 /GUI/Build/__pycache__/
 /GUI/Build/oasa3-lib/
+/GUI/Build/
+/GUI/Build/UI_backups/
+/GUI/Build/PDBaser_GUI.py.egg-info/
+/GUI/Build/PDBaser_GUI.dist-bak/
+/GUI/Build/PDBaser_GUI.build-bak/
+/GUI/Build/pdbaser.build/
+/GUI/Build/oasa3-lib/
+/GUI/Build/exp/
+/GUI/Build/cli_py/
+/GUI/Build/.vscode/
+/GUI/Build/.vs/
+/GUI/Build/.idea/
+/GUI/Build/exp/
+/GUI/Build/UI_backups/
