fixed crashing when protonating
fixed pdbaser crashing due to trying to protonate non peptidic chains ( oligosacharids for example ), This is NOT PDBaser's fault, it is due to very loosely generated pdb files... Nonetheless it was generating an error and was dealt with.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ GUI/Source/__pycache__/pdbExtractor.cpython-36.pyc
 /GUI/Build/obabel_py38/
 /GUI/Build/obabel_py36/
 /GUI/Build/pdbaser.dist/
+*.pyc
